Preformatted text not preserving whitespace in raw stylesheet (bug #623650)

--- a/htdocs/theme/raw/static/style/style.css
+++ b/htdocs/theme/raw/static/style/style.css
@@ -104,7 +104,7 @@ p {
 }
 pre, tt {
 	font-size: 1.1667em;
-    white-space: normal;
+    white-space: pre-wrap;
 }
 .fullwidth {
     width: 100%;
